# s3_trigger_to_gcs

./: README.md  app.py  pyproject.toml  requirements.txt
tests/: test_s3_to_gcs.py
